<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingHorizontal="23dp"
        android:paddingVertical="15dp"
        >

        <TextView
            android:id="@+id/dialog_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/howToDoTest"

            android:textSize="23sp"
            android:fontFamily="@font/afacad_bold"
            android:textColor="@color/main_color_purple_dark"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_listening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listening"

            android:textSize="17sp"
            android:fontFamily="@font/afacad_medium"
            android:textColor="@color/black"

            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/content_listening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listening_description"
            android:paddingStart="10dp"
            android:textSize="15sp"
            android:fontFamily="@font/afacad_medium"
            android:textColor="@color/dark_grey"

            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/title_listening"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reading"

            android:textSize="17sp"
            android:fontFamily="@font/afacad_medium"
            android:textColor="@color/black"

            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/content_listening"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/content_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/afacad_medium"
            android:paddingStart="10dp"
            android:text="@string/reading_description"
            android:textColor="@color/dark_grey"

            android:textSize="15sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_reading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>