<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/main_color_purple"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginPage"
            android:textColor="@color/white"
            android:gravity="center"

            android:textSize="24sp"
            android:fontFamily="@font/afacad_bold"
            android:layout_marginBottom="15dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/afacad_regular"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="15sp"

        android:layout_marginBottom="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="35dp"

        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/box_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_happy"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/main_color_purple"

        android:fontFamily="@font/afacad_bold"
        android:textSize="@dimen/logo_text_size"

        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/icon_username"
            android:layout_width="31dp"
            android:layout_height="31dp"

            app:layout_constraintBottom_toBottomOf="@+id/input_username"
            app:layout_constraintTop_toTopOf="@+id/input_username"

            app:srcCompat="@drawable/icon_assets_user"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/afacad_medium"

            android:hint="@string/loginWithUserName"
            android:inputType="text"

            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/icon_username"

            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"

            android:layout_marginTop="0dp"

            android:background="@color/main_color_purple"

            app:layout_constraintLeft_toLeftOf="@+id/icon_username"
            app:layout_constraintRight_toRightOf="@+id/input_username"
            app:layout_constraintTop_toBottomOf="@+id/input_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/box_username"
        android:layout_marginTop="25dp"
        >

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="31dp"
            android:layout_height="28dp"

            android:layout_marginBottom="2dp"

            app:srcCompat="@drawable/icon_assets_privatelock"

            app:layout_constraintTop_toTopOf="@+id/input_password"
            app:layout_constraintBottom_toBottomOf="@+id/input_password"

            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/afacad_medium"

            android:inputType="textPassword"
            android:hint="@string/loginWithPassword"

            android:textSize="16sp"

            app:layout_constraintLeft_toRightOf="@+id/icon_password"

            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"

            android:layout_marginTop="0dp"

            android:background="@color/main_color_purple"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintLeft_toLeftOf="@+id/icon_password"
            app:layout_constraintRight_toRightOf="@+id/input_password"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/checkBox_rule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginRegister_rule"

        android:fontFamily="@font/afacad_medium"
        android:textSize="@dimen/policy_text_size"

        android:gravity="start"

        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/box_password"
        app:layout_constraintLeft_toLeftOf="@+id/box_password"
        app:layout_constraintRight_toRightOf="@+id/box_password"
        />

    <TextView
        android:id="@+id/forgot_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_medium"
        android:text="@string/forgotPassword"
        android:visibility="visible"

        android:textColor="@color/main_color_purple"
        android:textSize="@dimen/font_size_label"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintBottom_toTopOf="@id/line"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_input_height"
        android:layout_marginTop="30dp"

        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:elevation="2dp"

        app:layout_constraintLeft_toLeftOf="@+id/button_login_google"
        app:layout_constraintRight_toRightOf="@+id/button_login_google"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_rule">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/afacad_medium"

            android:text="@string/login"
            android:textSize="17sp"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintBottom_toTopOf="@+id/button_login_google"
        app:layout_constraintEnd_toEndOf="@+id/box_password"
        app:layout_constraintStart_toStartOf="@+id/box_password"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:ignore="MissingConstraints">

    </View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_login_google"
        android:layout_width="@dimen/button_input_width"
        android:layout_height="@dimen/button_input_height"

        android:background="@drawable/rounded_white"
        android:clickable="true"
        android:focusable="true"

        android:layout_marginTop="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:ignore="MissingConstraints"
        android:elevation="2dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="15dp"
            >

            <ImageView
                android:id="@+id/icon_google"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@drawable/icon_assets_google"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login with Google"

                android:textSize="17sp"
                android:fontFamily="@font/afacad_medium"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/field_loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/button_login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"

            android:fontFamily="@font/afacad_medium"
            android:textSize="@dimen/font_size_label"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/register_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/textView5"

            android:fontFamily="@font/afacad_bold"
            android:textSize="@dimen/font_size_label"
            android:textColor="@color/text_color_selector"
            tools:ignore="MissingConstraints"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/error_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_medium"
        android:text="@string/error_login_empty"
        android:visibility="invisible"

        android:textColor="@color/red"
        android:textSize="16sp"

        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_loginRegister"
        />

    <TextView
        android:id="@+id/error_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_medium"
        android:text="@string/error_username_specialsympol"
        android:visibility="invisible"

        android:textColor="@color/red"
        android:textSize="@dimen/error_text_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_username"
        />

    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_medium"
        android:text="@string/error_password_invalid"
        android:visibility="invisible"

        android:textColor="@color/red"
        android:textSize="@dimen/error_text_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_password"
        />

    <TextView
        android:id="@+id/error_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_medium"
        android:text="@string/error_checkboxes"
        android:visibility="invisible"
        android:layout_marginTop="2dp"
        android:textColor="@color/red"
        android:textSize="@dimen/error_text_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_rule"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/loading"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/button_login"
        app:layout_constraintBottom_toBottomOf="@+id/button_login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_login"

        tools:ignore="MissingConstraints"
        >

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>